@@ -146,6 +146,9 @@ Release 2.9.0 - UNRELEASED
     YARN-4497. RM might fail to restart when recovering apps whose attempts are missing.
     (Jun Gong via rohithsharmaks)
 
+    YARN-4574. Fix random failure in TestAMRMClientOnRMRestart.
+    (Takashi Ohnishi via rohithsharmaks)
+
 Release 2.8.0 - UNRELEASED
 
   INCOMPATIBLE CHANGES
